# hashed-id

./: Cargo.toml  README.md
src/: error.rs  hash.rs  main.rs  par.rs
