[package]
name = "hashed-id"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "*"
confy = "*"
data-encoding = "2.1.2"
env_logger = "*"
log = "*"
ring = "0.16.9"
structopt = "*"

[dev-dependencies]
assert_cmd = "*"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"
