[package]
name = "hashed-id"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "*"
confy = "*"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.0"
data-encoding = "2.1.2"
env_logger = "*"
log = "*"
num_cpus = "1.11.1"
ring = "0.16.9"
structopt = "*"

[dev-dependencies]
assert_cmd = "*"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"
